--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.1.0",
     "react-native-tailwindcss": "^1.1.11",
     "tailwind-react-native-classnames": "^1.5.1"
   },
