--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
+    "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.8",
     "expo-linear-gradient": "^12.7.2",
