--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^6.3.25",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~50.0.8",
+    "expo": "^50.0.11",
     "expo-linear-gradient": "^12.7.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
@@ -28,13 +28,15 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^14.1.0",
     "react-native-tailwindcss": "^1.1.11",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "tailwind-react-native-classnames": "^1.5.1"
