--- a/app.json
+++ b/app.json
@@ -29,6 +29,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "1642f42c-c6a4-4cb0-b074-901d7dfed129"
+      }
+    }
   }
 }
