--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-toast-message": "^2.2.0",
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "^13.8.2",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "tailwind-react-native-classnames": "^1.5.1"
