--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.13",
+    "expo-av": "^13.10.5",
     "expo-linear-gradient": "^12.7.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
@@ -39,7 +40,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-toast-message": "^2.2.0",
-    "react-native-video": "^5.2.1",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-video-player": "^0.14.0",
     "react-native-webview": "^13.8.2",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
