--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.13",
     "expo-av": "^13.10.5",
+    "expo-file-system": "^16.0.8",
+    "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "^12.7.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
