--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.13",
     "expo-av": "^13.10.5",
+    "expo-document-picker": "^11.10.1",
     "expo-file-system": "^16.0.8",
     "expo-image-picker": "^14.7.1",
     "expo-linear-gradient": "^12.7.2",
