--- a/package.json
+++ b/package.json
@@ -12,40 +12,41 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
-    "@stripe/stripe-react-native": "^0.35.1",
+    "@stripe/stripe-react-native": "^0.18.1",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "^50.0.13",
-    "expo-av": "^13.10.5",
-    "expo-document-picker": "^11.10.1",
-    "expo-file-system": "^16.0.8",
-    "expo-image-picker": "^14.7.1",
-    "expo-linear-gradient": "^12.7.2",
+    "expo": "^50.0.14",
+    "expo-asset": "~9.0.2",
+    "expo-av": "~13.10.5",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.8",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "^0.73.5",
+    "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-link": "^4.1.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "14.1.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video-player": "^0.14.0",
-    "react-native-webview": "^13.8.2",
+    "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "tailwind-react-native-classnames": "^1.5.1"
